# Students_database_RESTful

./: README.md  docker-compose.yml  migrate.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  check.py  config.py  config_db.py  db_util.py  docker-compose.yml  generator.py  init.py  main.py  models.py  models_2.py  models_3.py
app/Swagger/: swagger.yaml
app/config/: development.py  production.py  testing.py
app/swagger/: swagger.yaml  swagger.yml
app/swagger/api/: courses.yaml  groups.yaml  student_course.yaml  students.yaml
app/views/: courses.py  groups.py  student_course.py  students.py
application/: __init__.py  docker-compose.yml  main.py  report.py
config/: development.py
report_FEDONYUK/: report.py
src/: api_logs.2023-09-06_20-26-51_168490.json  api_logs.json  check.py  generator.py  main.py  models.py
src/config/: development.py  production.py  testing.py
src/swagger/: swagger.yml
src/views/: courses.py  groups.py  student_course.py  students.py
tests/: __init__.py  api_logs.json  conftest.py  test_api.py  test_courses.py  test_db.py  test_groups.py  test_init.py  test_init_old.py  test_main.py  test_student_course.py  test_students.py  test_test.py  test_web.py
