[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask RESTful API + PostgreSQL + Docker"
version = "1.0"
authors = [{ name = "Fedonyuk Anatoliy", email = "dekorstyle0@gmail.com" }, ]
description = """This application that inserts/select/updates/deletes data in the PostgreSQL database using sqlalchemy
 and flask rest framework."""
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://github.com/Anatoliy-Fedonyuk/Students_database_RESTful"
"Bug Tracker" = "https://github.com/Anatoliy-Fedonyuk/Students_database_RESTful/issues"